Update for Minecraft 1.21.5